== Changes for version 0.1.1

* specify explicit invocant on all method calls

== Changes for version 0.1.0

* A handful of typos fixed
* Fixed the singleton constructor mess in Test::Builder
* Filled out stub documentation
* Added Makefile.PL

== Changes for version 0.0.1

* Version numbers and POD Documentation added.
* Initial checkin of code.